--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ pyenv
 pg_data
 search
 *.jar
+settings.json
 
 # Ignores temp experimental results directories but not ignore archived results
 results/*
